# BrigadeiroLearning

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-validation.yml
src/: dummyFile.py  model_dummy.py
tests/: dummyTestFile.py  test_dummy.py
