[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "BrigadeiroLearning"
authors = [{name = "Julian Saavedra"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.5"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/julianSaavedra/BrigadeiroLearning/"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-ra"
minversion = "7.4"
testpaths = [ "tests" ]
python_files = "test_*.py"

[tool.flake8]
count = true
